--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ body {
 	-ms-flex:1;
 	flex:1;
 	background-color:#b4907a;
+	height:300px;
 }
 .lep_cat-menu li:first-child {
 	border-left:10px solid #dedddc;
@@ -128,16 +129,34 @@ body {
 	border-right:10px solid #dedddc;
 }
 .lep_cat-menu h1 {
-	margin:20px;
+	background: rgba(255,255,255,.7);
+	-webkit-flex-basis: 100%;
+	-ms-flex-preferred-size: 100%;
+	flex-basis: 100%;
+	padding:10px;
 }
 .lep_cat-menu li a {
 	display:block;
-	background: rgba(255,255,255,.7);
-    padding: 10px;
+	padding: 10px;
     font-size: 20px;
     text-transform: uppercase;
 	color:#393939;
 	text-decoration:none;
+	width:100%;
+	height:100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: end;
+	-webkit-align-items: flex-end;
+	-ms-flex-align: end;
+	align-items: flex-end;
+	padding:10px;
 }
 
 /* ------------------------------------------------
